c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/scalar_expressions/void_condition_do_loop.c
void f(void) { return; }
int main(void) {
  int i = 0;
  do {
    i = i + 1;

  // void expressions are non-scalar, so they can't be used as controlling conditions
  } while (f());
  return 0;
}